--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: samplingin
 Title: Dynamic Survey Sampling Solutions
-Version: 1.0.1
+Version: 1.0.2
 Authors@R: 
-    person("Choerul", "Afifanto", email = "choerulafifanto@gmail.com", role = c("aut", "cre", "cph"))
-Description: A robust solution employing both systematic and PPS (Probability Proportional to Size) sampling methods, ensuring a methodical and representative selection of data. 
-    Seamlessly allocate predetermined allocations to smaller levels. Kish, L. (1965) <https://books.google.co.id/books?id=xiZmAAAAIAAJ>.
+    person("Choerul", "Afifanto", , "choerulafifanto@gmail.com", role = c("aut", "cre", "cph"))
+Description: A robust solution employing both systematic and PPS
+    (Probability Proportional to Size) sampling methods, ensuring a
+    methodical and representative selection of data.  Seamlessly allocate
+    predetermined allocations to smaller levels. Kish, L. (1965)
+    <https://books.google.co.id/books?id=xiZmAAAAIAAJ>.
 License: MIT + file LICENSE
 Depends: 
     R (>= 2.10)
