--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,5 +6,6 @@ import(dplyr)
 importFrom(data.table,rbindlist)
 importFrom(magrittr,"%>%")
 importFrom(rlang,caller_env)
+importFrom(sampling,inclusionprobabilities)
 importFrom(stats,runif)
 importFrom(utils,tail)
